# windows-installer

./: Cargo.toml
src/: check.rs  install.rs  macros.rs  main.rs  notify.rs  screens.rs  utils.rs
src/install/: carla.rs  cdn.rs  dependencies.rs  finish.rs  mod.rs  morgana.rs
src/screens/: finished.rs  home.rs  installer.rs  installing.rs  mod.rs
