[package]
name = "gui-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
druid = "0.8.3"
futures-util = "0.3.32"
notify-rust = "4.17.0"
regex = "1.12.3"
reqwest = { version = "0.13.4", features = ["json", "stream"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
zip = "8.6.0"

[target.'cfg(windows)'.dependencies]
privesc = "1.2"
winapi = "0.3.9"
